XMLtoCSV/objects/unpackaged/objects/Business_Event_Target_vod__c.object
<CustomObject>
    <description>Account targets of Business Event</description>
    <fields>
        <fullName>Account_Name_vod__c</fullName>
        <description>Account Name based upon the Account_vod reference field</description>
        <formula>Account_vod__r.Formatted_Name_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Target account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Event Targets</relationshipLabel>
        <relationshipName>Business_Event_Targets_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Event_vod__c</fullName>
        <description>The parent object that this detail information belongs to</description>
        <label>Business Event</label>
        <referenceTo>Business_Event_vod__c</referenceTo>
        <relationshipLabel>Business Event Targets</relationshipLabel>
        <relationshipName>Business_Event_Targets_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>Unique key code for each Target Hospital</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Visit_Date_vod__c</fullName>
        <description>The next visit date which remain</description>
        <label>Next Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Explain_Date_vod__c</fullName>
        <description>The target date of pre-explain</description>
        <label>Pre Explain Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Date_vod__c</fullName>
        <description>The date that the target account (hospital) purchases the new drug</description>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remaining_Calls_vod__c</fullName>
        <description>The remain call # of they have to do in the regulation hospital&apos;s calls</description>
        <label>Remaining Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Business Event Target</label>
    <nameField>
        <displayFormat>BET{000000000}</displayFormat>
        <label>Business Event Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Event Targets</pluralLabel>
    <recordTypes>
        <fullName>EPPV_vod</fullName>
        <active>true</active>
        <description>EPPV</description>
        <label>EPPV</label>
    </recordTypes>
    <recordTypes>
        <fullName>PI_vod</fullName>
        <active>true</active>
        <description>PI</description>
        <label>PI</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>